Admin Page and Main Client Page react started.

--- a/eastyorkgardenclub.client/index.html
+++ b/eastyorkgardenclub.client/index.html
@@ -1,215 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="src/img/eastyorkgardenclublogo.gif" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <title>East York Garden Club</title>
+    <script type="module"
+            src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
           rel="stylesheet" />
-
-    <link rel="stylesheet" href="src/css/general.css" />
-    <link rel="stylesheet" href="src/css/mainPage/index.css" />
-
-    <script type="module"
-            src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-
-    <title>East York Garden Club</title>
-    <link rel="icon" type="image/svg+xml" href="src/img/eastyorkgardenclublogo.gif" />
 </head>
 <body>
-    <header>
-        <a href="#">
-            <img class="logo"
-                 src="src/img/eastyorkgardenclublogo.gif"
-                 alt="East York Garden Club logo" />
-        </a>
-        <nav class="main-nav">
-            <ul class="main-nav-list">
-                <li><a class="main-nav-link" href="#">Home</a></li>
-                <li><a class="main-nav-link" href="#">About</a></li>
-                <li><a class="main-nav-link" href="#">Meeting</a></li>
-                <li><a class="main-nav-link" href="#">News letter</a></li>
-                <li><a class="main-nav-link" href="#">Flower show</a></li>
-                <li><a class="main-nav-link nav-cta" href="#">Join us</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <section class="section-hero">
-            <div class="hero">
-                <div class="hero-img-box">
-                    <img class="hero-img"
-                         src="src/img/gardening-main.jpg"
-                         alt="people are gardening together" />
-                </div>
-                <div class="hero-text-box">
-                    <h1 class="heading-primary hero-heading">
-                        Hello! Welcome to the East York Gardening Club
-                    </h1>
-                    <p class="hero-description">
-                        Let’s make it green together. Let's be happy together. <br />Let’s
-                        make it green together.
-                    </p>
-                    <a class="Learn-more-link" href="#">Learn more &gt;</a>
-                </div>
-            </div>
-        </section>
-
-        <section class="section-meetings">
-            <div class="container">
-                <h1 class="heading-primary">Meetings</h1>
-                <p class="heading-description">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
-                    quisquam aliquam, dolorem voluptates obcaecati pariatur.
-                </p>
-            </div>
-            <div class="container grid grid--4-cols">
-                <div class="meeting-card">
-                    <img class="meeting-img"
-                         src="src/img/urban farming.jpg"
-                         alt="
-            A woman is watering a rooftop garden" />
-                    <div class="meeting-content">
-                        <p class="meeting-subtitle">topic</p>
-                        <p class="meeting-title">Urban Farming</p>
-                        <p class="meeting-date">October 16, 2023</p>
-                        <a class="meeting-link" href="#">continue reading &rarr;</a>
-                    </div>
-                </div>
-                <div class="meeting-card">
-                    <img class="meeting-img"
-                         src="src/img/sustainable Design.jpg"
-                         alt="
-              sustainable Design" />
-                    <div class="meeting-content">
-                        <p class="meeting-subtitle">topic</p>
-                        <p class="meeting-title">Sustainable Design</p>
-                        <p class="meeting-date">September 18, 2023</p>
-                        <a class="meeting-link" href="#">continue reading &rarr;</a>
-                    </div>
-                </div>
-                <div class="meeting-card">
-                    <img class="meeting-img"
-                         src="src/img/weeds.jpg"
-                         alt="
-            A woman is watering a rooftop garden" />
-                    <div class="meeting-content">
-                        <p class="meeting-subtitle">topic</p>
-                        <p class="meeting-title">All About Weeds</p>
-                        <p class="meeting-date">Jun 19, 2023</p>
-                        <a class="meeting-link" href="#">continue reading &rarr;</a>
-                    </div>
-                </div>
-                <div class="meeting-card">
-                    <img class="meeting-img"
-                         src="src/img/orchid.jpg"
-                         alt="
-            A woman is watering a rooftop garden" />
-                    <div class="meeting-content">
-                        <p class="meeting-subtitle">topic</p>
-                        <p class="meeting-title">
-                            Grocery Store Orchid Rescues: Repotting Demonstration
-                        </p>
-                        <p class="meeting-date">Mat 15, 2023</p>
-                        <a class="meeting-link" href="#">continue reading &rarr;</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="section-contacts">
-            <div class="container">
-                <h1 class="heading-primary">Contact Us</h1>
-            </div>
-            <div class="container grid grid--2-cols">
-                <div class="contact-info-box">
-                    <h2 class="contact-subtitle">Contact info</h2>
-                    <div class="addres-wrap">
-                        <ion-icon class="contact-icon" name="location-outline"></ion-icon>
-                        <div>
-                            <p>Stan Wadlow Clubhouse, 373 Cedarvale Ave,</p>
-                            <p>East York, ON M4C 4K7</p>
-                        </div>
-                    </div>
-                    <div class="email-wrap">
-                        <ion-icon class="contact-icon" name="mail-outline"></ion-icon>
-                        <p>gardenclub@eygc.ca</p>
-                    </div>
-                    <iframe class="map"
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2884.5961340180147!2d-79.31768422343836!3d43.69815897110008!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4cc47b10961d3%3A0x755f47f699d1f98e!2sStan%20Wadlow%20Clubhouse!5e0!3m2!1sen!2sca!4v1701052904461!5m2!1sen!2sca"
-                            width="100%"
-                            height="450"
-                            style="border: 0"
-                            allowfullscreen=""
-                            loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div>
-                <div class="send-message-box">
-                    <h2 class="send-message-subtitle">Send a message</h2>
-                    <form action="send-message-form">
-                        <div>
-                            <label class="name-label" for="full-name">Name</label>
-                            <input class="name-input"
-                                   type="text"
-                                   id="name"
-                                   placeholder="John Smith"
-                                   name="name"
-                                   required />
-                        </div>
-                        <div>
-                            <label class="email-label" for="email">Email</label>
-                            <input class="email-input"
-                                   type="text"
-                                   id="email"
-                                   placeholder="me@example.com"
-                                   name="email"
-                                   required />
-                        </div>
-
-                        <div>
-                            <label class="message-label" for="message">Message</label>
-                            <input class="message-input"
-                                   type="text"
-                                   id="message"
-                                   name="message"
-                                   placeholder="Your message here" />
-                        </div>
-                    </form>
-                    <div class="submit-btn-box">
-                        <button class="submit-btn">Submit</button>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <div>
-            <p class="copyright">
-                Copyright &copy; <span class="year">2023</span> by Yesong Joo & Ege
-                Gunege. All rights reserved.
-            </p>
-        </div>
-        <div class="social-nav">
-            <a class="face-book"
-               href="https://www.facebook.com/groups/EastYorkGC"
-               target="_blank">
-                <ion-icon class="face-book-icon" name="logo-facebook"></ion-icon>
-            </a>
-
-            <nav class="footer-nav">
-                <ul class="footer-nav-list">
-                    <li><a class="footer-nav-link" href="#">Home</a></li>
-                    <li><a class="footer-nav-link" href="#">About</a></li>
-                    <li><a class="footer-nav-link" href="#">Meeting</a></li>
-                    <li><a class="footer-nav-link" href="#">News letter</a></li>
-                    <li><a class="footer-nav-link" href="#">Flower show</a></li>
-                </ul>
-            </nav>
-        </div>
-    </footer>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
 </body>
 </html>
